Archive2/d2/58432f315bc674/output
main.cpp:17:15: error: no template named 'vector'; did you mean 'std::vector'?
    auto vc = vector<unsigned char>{ 65, 66, 67 };
              ^~~~~~
              std::vector
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:210:11: note: 'std::vector' declared here
    class vector : protected _Vector_base<_Tp, _Alloc>
          ^
main.cpp:18:15: error: no template named 'vector'; did you mean 'std::vector'?
    auto vi = vector<int>{ 4, 5, 6 };        
              ^~~~~~
              std::vector
/usr/lib/gcc/x86_64-linux-gnu/4.8/../../../../include/c++/4.8/bits/stl_vector.h:210:11: note: 'std::vector' declared here
    class vector : protected _Vector_base<_Tp, _Alloc>
          ^
2 errors generated.
